--- a/frmwrk.css
+++ b/frmwrk.css
@@ -353,5 +353,52 @@ position left to 40px. */
 
 
 
+/* Page Footer */
+
+.page-footer {
+	background-color: var(--color-foreground);
+	color: var(--color-background);
+	display: flex;
+	justify-content: space-between
+}
+
+.page-footer h1, 
+.page-footer h2, 
+.page-footer h3, 
+.page-footer h4, 
+.page-footer h5, 
+.page-footer h6 {
+	color: var(--color-light);
+}
+
+.page-footer > ul {
+	margin: 0;
+	padding: 0;
+	padding: 2em;
+	list-style-type: none;
+}
+
+.page-footer a {
+	color: var(--color-info);
+	filter: none;
+}
+
+.page-footer a:link {
+	color: var(--color-background);
+	filter: none;
+}
+
+.page-footer a:visited {
+	
+}
+
+.page-footer a:hover {
+	color: var(--color-light);
+	filter: none;
+}
+
+.page-footer a:active {
+	
+}
 
 
